增加天气的获取

--- a/myapplication/src/main/res/values/strings.xml
+++ b/myapplication/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_count_view_pager">CountViewPagerActivity</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_weather">WeatherActivity</string>
 </resources>
